adding files to GitHub

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1 th:text="${message}"> Welcome to our Bookstore!</h1>
 <a href="/addBook">Add a book</a>
+<a href="/showallbooks">Show Books</a>
 </body>
 </html>
